--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         text-align: center;
         margin-left: 0;
         margin-right: 0;
+        font-family: sans-serif;
       }
 
       p {
