--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
   </head>
   <body>
     <section id="family-filter">
+      <p>https://family.cloudflare-dns.com/dns-query{?dns}</p>
+      <p>family.cloudflare-dns.com</p>
+    </section>
+
+    <br />
+    
+    <section id="family-filter">
       <p>https://doh.cleanbrowsing.org/doh/family-filter</p>
       <p>family-filter-dns.cleanbrowsing.org</p>
     </section>
